# BIT-Login

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  setup.py  test.py
bit_login/: __init__.py  config.py  login.py  second_auth.py  service.py
bit_login/services/: jwb.py  jxzxehall.py
bit_login/sso/: __init__.py  captcha.py  client.py  crypto.py  exceptions.py  fingerprint.py  models.py
server/: Dockerfile  __init__.py  auth.py  requirements.txt  schemas.py  server.py  start.sh
server/core/: __init__.py  auth.py  config.py  http.py  mfa_state.py  sessions.py
server/routers/: auth.py  ics.py  jwb.py  jxzxehall.py
tests/: test_login_state.py  test_mfa_state.py  test_second_auth.py  test_service_state.py
